# CFD_Julia_to_Cpp

./: README.md
01_Heat_Equation_FTCS/: CMakeLists.txt  main.cpp  output.txt  run.sh  test.cpp
01_Heat_Equation_FTCS/calculate/: CMakeLists.txt
01_Heat_Equation_FTCS/calculate/include/: cal_error.h  calculate.h
01_Heat_Equation_FTCS/calculate/src/: cal_error.cpp  calculate.cpp
